--- a/fourthHomeWork.ipynb
+++ b/fourthHomeWork.ipynb
@@ -1592,9 +1592,10 @@
    ],
    "source": [
     "print('Create a scatterplot with the number of items orderered per order price')\n",
-    "plt.scatter(df['order_id'], df['item_price'], color=\"#000066\")\n",
-    "plt.xlabel(u'Номер заказа')\n",
-    "plt.ylabel(u'Цена')\n",
+    "df2=df.groupby('item_price').sum()",
+    "plt.scatter(df2.index, df2['quantity'], color=\"#000066\")\n",
+    "plt.xlabel(u'Цена')\n",
+    "plt.ylabel(u'Количество заказанных товаров по данной цене')\n",
     "plt.show()"
    ]
   },
